# Map-Homework3-4

./: CMakeLists.txt  README.MD  main.cpp  shape.cpp  transform.cpp
Refactored/: Circle.cpp  Circle.h  Cylinder.cpp  Cylinder.h  Line.cpp  Line.h  Parallelepiped.cpp  Parallelepiped.h  Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Scale.cpp  Scale.h  ShapeBase.cpp  ShapeBase.h  Shift.cpp  Shift.h  SimpleShape.cpp  SimpleShape.h  TransformBase.h  ZoomInX.h  ZoomInY.h  ZoomInZ.h  ZoomOut.h
